8.1.1
-----


8.1.0
-----
(RB=838063)
Count server error when calculating error rate in degrader

8.0.7
-----
(RB=354529)
D2 will retry request to a different host when the first attempt meets condition

(RB=836969)
Add serviceName to quarantine logs

(RB=826119)
Catch and log exceptions thrown by the async pool waiters

8.0.6
-----
(RB=830455)
Removed extra R2 filter error log

8.0.5
-----
(RB=825708)
Add request details to the quarantine health checking logs
(RB=824641)
Update SetMode.java
(RB=824394)
Cache Validator classes to avoid reloading them on every request and response.

8.0.4
-----
(RB=820373)
Fixed SI-3070 and related issues

8.0.3
-----
(RB=776961)
Add D2 slow start support.
(RB=821295)
Adding quarantine properties to d2 schema

8.0.2
-----
(RB=819217)
Fixed snapshot check bug which treats all the IDL and snapshot as new.

8.0.1
-----
(RB=817642)
Fixed bug that snapshot file is not generated.

8.0.0
-----
(RB=815196)
Isolation of gradle's classpath from pegasus plugin's classpath.

(RB=805122)
Add a cap to quarantine maxPercent.

7.0.3
-----
(RB=756803)
Add d2 quarantine support

7.0.2
-----
(RB=793469)
[pegasus] Follow up on Min's feedback from 758221 - refactored filter response
context factory name and refactored RestLiCallback to be instantiated
from within Filterchain.

(RB=785576)
Add HTTP protocol version to request context

(RB=798720)
Add http.protocolVersion to AllowedClientPropertyKeys

7.0.1
-----
(RB=793402)
Make MPConsistentHashRing iterator honor the weight of each element.

(RB=794070)
Fix logging issues in DegraderLoadBalancerStrategyV3.

7.0.0
-----
(RB=790683)
Added response data builder to allow Rest.li users the ability to
instantiate response data and response envelope for tests.

(RB=761646)
Making envelope interfaces more intuitive by having naming reflect resource
method and adding support for determining CREATE vs. CREATE + GET.

(RB=758221)
Filter improvements - simpler interface, support for async error invocation,